--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,13 @@
 OPENAI_API_KEY=
 
-OPENSEARCH_URL=
-OPENSEARCH_USERNAME=
-OPENSEARCH_PASSWORD=
+WEAVIATE_HOST=
+WEAVIATE_SCHEME=
+WEAVIATE_API_KEY=
+
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+
+WEB_SCRAPER_THREADS=
