--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,29 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs-converter": "^4.7.0",
+    "@tensorflow/tfjs-core": "^4.7.0",
+    "@tensorflow/tfjs-node": "^4.7.0",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "fast-xml-parser": "^4.2.4",
+    "graphql": "^16.6.0",
     "langchain": "^0.0.91",
+    "pg": "^8.11.0",
+    "puppeteer": "^19.11.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "threads": "^1.7.0",
+    "typeorm": "^0.3.16",
+    "weaviate-ts-client": "^1.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -50,6 +67,12 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "@tensorflow-models/universal-sentence-encoder": {
+      "@tensorflow/tfjs-converter": "$@tensorflow/tfjs-converter",
+      "@tensorflow/tfjs-core": "$@tensorflow/tfjs-core"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
