Some updates needed because m1 sucks

--- a/workspace/apps/backend/Dockerfile
+++ b/workspace/apps/backend/Dockerfile
@@ -2,21 +2,25 @@ FROM docker.io/node:20.2.0
 
 ENV HOST=0.0.0.0
 ENV PORT=8080
+ENV NODE_ENV=production
+
+ENV PUPPETEER_CACHE_DIR=/app/.cache/puppeteer
 
 WORKDIR /app
 
-RUN apt-get update -y && \
-  apt-get install -y build-essential python chromium chromium-driver && \
-  apt-get clean all && \
-  rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y \
+  && apt-get install -y build-essential python chromium ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils \
+  && apt-get clean all \
+  && rm -rf /var/lib/apt/lists/*
 
-RUN groupadd -r sept && useradd --no-log-init -r -g sept sept
+RUN groupadd -r sept \
+  && useradd -rm -g sept -G audio,video sept
 
 COPY package.json ./
 COPY dist/apps/backend backend
 
-RUN npm install && \
-  npm rebuild @tensorflow/tfjs-node --build-from-source && \
+RUN npm install --omit=dev && \
+  npm rebuild @tensorflow/tfjs-node puppeteer --build-from-source && \
   chown -R sept:sept /app && \
   chmod -R 755 /app
 
