--- a/workspace/apps/backend/project.json
+++ b/workspace/apps/backend/project.json
@@ -64,7 +64,7 @@
       "command": "docker build --pull={args.pull} --no-cache={args.no-cache} --platform={args.platform} -f apps/backend/Dockerfile . -t septuagint/backend:{args.tag}",
       "options": {
         "no-cache": false,
-        "platform": "linux/amd64",
+        "platform": "linux/x86_64",
         "pull": true,
         "tag": "latest"
       }
