--- a/compose.yml
+++ b/compose.yml
@@ -1,21 +1,52 @@
 services:
-  weaviate:
-    image: semitechnologies/weaviate:1.19.6
-    ports:
-      - 8080:8080
-    volumes:
-      - ./volumes/weaviate:/var/lib/weaviate
+  etcd:
+    container_name: milvus-etcd
+    image: quay.io/coreos/etcd:v3.5.5
     environment:
-      QUERY_DEFAULTS_LIMIT: 25
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
-      PERSISTENCE_DATA_PATH: "/var/lib/weaviate"
-      DEFAULT_VECTORIZER_MODULE: "none"
-      CLUSTER_HOSTNAME: "node1"
+      - ETCD_AUTO_COMPACTION_MODE=revision
+      - ETCD_AUTO_COMPACTION_RETENTION=1000
+      - ETCD_QUOTA_BACKEND_BYTES=4294967296
+      - ETCD_SNAPSHOT_COUNT=50000
+    volumes:
+      - ./volumes/etcd:/etcd
+    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+
+  minio:
+    container_name: milvus-minio
+    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+    environment:
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+    volumes:
+      - ./volumes/minio:/minio_data
+    command: minio server /minio_data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
+  milvus:
+    container_name: milvus-standalone
+    image: milvusdb/milvus:v2.2.9
+    command: ["milvus", "run", "standalone"]
+    environment:
+      - ETCD_ENDPOINTS=etcd:2379
+      - MINIO_ADDRESS=minio:9000
+    volumes:
+      - ./volumes/milvus:/var/lib/milvus
+    ports:
+      - "19530:19530"
+      - "9091:9091"
+    depends_on:
+      - "etcd"
+      - "minio"
 
   postgres:
     image: postgres:15.3
     ports:
       - 5432:5432
+    # In case you want to persist the data
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
     environment:
@@ -24,11 +55,18 @@ services:
       - POSTGRES_DB=septuagint
 
   backend:
-    image: septuagint/backend:0.0.1
+    image: septuagint/backend:latest
+    # Build image locally (must build nx project first)
+    # build:
+    #   context: ./workspace
+    #   dockerfile: apps/backend/Dockerfile
+    #   platforms:
+    #     - "linux/amd64"
+    #     - "linux/arm64/v8"
     ports:
       - 8081:8080
     env_file:
-      - ./workspace/apps/backend/.env
+      - ./backend/.env
     environment:
       - WEAVIATE_HOST=weaviate:8080
       - WEAVIATE_SCHEME=http
