--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,9 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=septuagint
 
 WEB_SCRAPER_THREADS=8
+
+RABBITMQ_HOST=
+RABBITMQ_PORT=5672
+RABBITMQ_VHOST=/
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
