--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 OPENAI_API_KEY=
 OPENAI_TEMPERATURE=0.7
 OPENAI_MODEL_NAME=gpt-3.5-turbo
+OPENAI_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
 MILVUS_URL=
 MILVUS_COLLECTION_NAME=septuagint
@@ -10,15 +11,13 @@ MILVUS_USER=
 MILVUS_PASSWORD=
 
 POSTGRES_HOST=
-POSTGRES_PORT=5432
+POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=septuagint
 
-WEB_SCRAPER_THREADS=8
+WEB_SCRAPER_THREADS=4
 
-RABBITMQ_HOST=
-RABBITMQ_PORT=5672
-RABBITMQ_VHOST=/
-RABBITMQ_USER=
-RABBITMQ_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
