--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,8 @@ services:
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
     profiles:
       - "default"
+      - "backend-dev"
+      - "frontend-dev"
 
   minio:
     image: minio/minio:RELEASE.2023-03-20T20-16-18Z
@@ -27,6 +29,8 @@ services:
       retries: 3
     profiles:
       - "default"
+      - "backend-dev"
+      - "frontend-dev"
 
   milvus:
     image: milvusdb/milvus:v2.2.9
@@ -45,6 +49,7 @@ services:
     profiles:
       - "default"
       - "backend-dev"
+      - "frontend-dev"
 
   postgres:
     image: postgres:15.3
@@ -57,34 +62,20 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=septuagint
     profiles:
+      - "default"
       - "backend-dev"
+      - "frontend-dev"
 
   redis:
-    image: redis:6.2.6
+    image: redis:7.0.11
     ports:
       - 6379:6379
     volumes:
       - ./volumes/redis:/data
-    environment:
-      - REDIS_PASSWORD=redis
     profiles:
       - "default"
       - "backend-dev"
-
-  rabbitmq:
-    image: rabbitmq:3.12.0-management
-    ports:
-      - 5672:5672
-      - 15672:15672
-    environment:
-      - RABBITMQ_DEFAULT_VHOST=/
-      - RABBITMQ_DEFAULT_USER=rabbitmq
-      - RABBITMQ_DEFAULT_PASS=rabbitmq
-    volumes:
-      - ./volumes/rabbitmq:/var/lib/rabbitmq
-    profiles:
-      - "default"
-      - "backend-dev"
+      - "frontend-dev"
 
   backend:
     image: septuagint/backend:latest
@@ -100,15 +91,11 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=septuagint
-      - RABBITMQ_HOST=rabbitmq
-      - RABBITMQ_PORT=5672
-      - RABBITMQ_VHOST=/
-      - RABBITMQ_USER=rabbitmq
-      - RABBITMQ_PASSWORD=rabbitmq
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       - milvus
       - postgres
-      - rabbitmq
       - redis
     profiles:
       - "default"
