--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,9 @@ WEB_SCRAPER_THREADS=4
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+
+AWS_S3_BUCKET_NAME=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
+
+UNSTRUCTURED_API_URL=
