--- a/backend/package.json
+++ b/backend/package.json
@@ -32,11 +32,14 @@
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "~18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "16.3.2",
@@ -55,13 +58,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.1.1",
     "@nestjs/typeorm": "^9.0.1",
-    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
-    "@tensorflow/tfjs-converter": "^4.7.0",
-    "@tensorflow/tfjs-core": "^4.7.0",
-    "@tensorflow/tfjs-node": "^4.7.0",
-    "@types/amqplib": "^0.10.1",
     "@zilliz/milvus2-sdk-node": "^2.2.15",
-    "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1396.0",
     "axios": "^1.0.0",
     "axios-retry": "^3.5.0",
     "bull": "^4.10.4",
@@ -76,12 +74,6 @@
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.16"
-  },
-  "overrides": {
-    "@tensorflow-models/universal-sentence-encoder": {
-      "@tensorflow/tfjs-converter": "$@tensorflow/tfjs-converter",
-      "@tensorflow/tfjs-core": "$@tensorflow/tfjs-core"
-    }
   },
   "jest": {
     "moduleFileExtensions": [
