--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nx/node": "16.3.2",
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
+    "@types/cron": "^2.0.1",
     "@types/jest": "^29.4.0",
     "@types/multer": "^1.4.7",
     "@types/node": "~18.7.1",
@@ -50,6 +51,7 @@
     "typescript": "~5.0.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.350.0",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.1.1",
@@ -57,9 +59,9 @@
     "@nestjs/core": "^9.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/schedule": "^2.2.3",
     "@nestjs/typeorm": "^9.0.1",
     "@zilliz/milvus2-sdk-node": "^2.2.15",
-    "aws-sdk": "^2.1396.0",
     "axios": "^1.0.0",
     "axios-retry": "^3.5.0",
     "bull": "^4.10.4",
