--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 
+OPENAI_BASE_PATH=https://api.openai.com/v1
 OPENAI_API_KEY=
 OPENAI_TEMPERATURE=0.7
 OPENAI_MODEL_NAME=gpt-3.5-turbo
@@ -11,19 +12,19 @@ MILVUS_USER=
 MILVUS_PASSWORD=
 
 POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_USER=
+POSTGRES_PORT=5432
+POSTGRES_USER=septuagint
 POSTGRES_PASSWORD=
 POSTGRES_DB=septuagint
 
 WEB_SCRAPER_THREADS=4
 
 REDIS_HOST=
-REDIS_PORT=
+REDIS_PORT=6379
 REDIS_PASSWORD=
 
-AWS_S3_BUCKET_NAME=
-AWS_S3_REGION=
+AWS_S3_BUCKET_NAME=septuagint
+AWS_S3_REGION=us-east-1
 AWS_S3_ACCESS_KEY_ID=
 AWS_S3_SECRET_ACCESS_KEY=
 
