--- a/compose.yml
+++ b/compose.yml
@@ -87,8 +87,21 @@ services:
       - "backend-dev"
       - "frontend-dev"
 
+  local-ai:
+    image: quay.io/go-skynet/local-ai:latest
+    ports:
+      - 8081:8080
+    environment:
+      - MODELS_PATH=/models
+    volumes:
+      - ./models:/models:cached
+    profiles:
+      - "default"
+      # - "backend-dev"
+      # - "frontend-dev"
+
   backend:
-    image: septuagint/backend:latest
+    image: septuagint/backend:0.0.1
     ports:
       - 8080:8080
     env_file:
