Refactoring and fixing some things

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
 NODE_ENV=development
 
-OPENAI_BASE_PATH=https://api.openai.com/v1
 OPENAI_API_KEY=
 OPENAI_TEMPERATURE=0.7
 OPENAI_MODEL_NAME=gpt-3.5-turbo
@@ -8,6 +7,7 @@ OPENAI_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
 MILVUS_URL=
 MILVUS_COLLECTION_NAME=septuagint
+MILVUS_DIMENSIONS=1536 # Should be size of OpenAI embeddings
 MILVUS_USER=
 MILVUS_PASSWORD=
 
@@ -16,6 +16,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=septuagint
 POSTGRES_PASSWORD=
 POSTGRES_DB=septuagint
+RUN_DATABASE_MIGRATIONS=true
 
 WEB_SCRAPER_THREADS=4
 
