--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "nest build",
     "build:docker": "nest build && docker build -t septuagint/backend:${npm_package_version} -t septuagint/backend:latest -f Dockerfile .",
+    "migrations:generate": "npm run build && typeorm migration:generate -d ./dist/app/configs/typeorm.js ./src/app/migrations/migration --pretty",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -73,6 +74,7 @@
     "langchain": "^0.0.91",
     "pg": "^8.11.0",
     "puppeteer": "^19.11.1",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
