Changing vectordb provider

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,22 @@
 NODE_ENV=development
 
-OPENAI_API_KEY=
-OPENAI_TEMPERATURE=0.7
-OPENAI_MODEL_NAME=gpt-3.5-turbo
-OPENAI_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
+LLM_API_KEY=
+LLM_TEMPERATURE=0.7
+LLM_MODEL_NAME=gpt-3.5-turbo
+LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
-MILVUS_URL=
-MILVUS_COLLECTION_NAME=septuagint
-MILVUS_DIMENSIONS=1536 # Should be size of OpenAI embeddings
-MILVUS_USER=
-MILVUS_PASSWORD=
+VECTOR_DB_URL=
+VECTOR_DB_COLLECTION_NAME=septuagint
+VECTOR_DB_DIMENSIONS=1536 # Should be size of OpenAI embeddings
+VECTOR_DB_USER=
+VECTOR_DB_PASSWORD=
 
-POSTGRES_HOST=
-POSTGRES_PORT=5432
-POSTGRES_USER=septuagint
-POSTGRES_PASSWORD=
-POSTGRES_DB=septuagint
+DATABASE_TYPE=postgres
+DATABASE_HOST=
+DATABASE_PORT=5432
+DATABASE_USER=septuagint
+DATABASE_PASSWORD=
+DATABASE_DB=septuagint
 RUN_DATABASE_MIGRATIONS=true
 
 WEB_SCRAPER_THREADS=4
@@ -24,9 +25,9 @@ REDIS_HOST=
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-AWS_S3_BUCKET_NAME=septuagint
-AWS_S3_REGION=us-east-1
-AWS_S3_ACCESS_KEY_ID=
-AWS_S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=septuagint
+S3_REGION=us-east-1
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
 
 UNSTRUCTURED_API_URL=
