--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,15 @@
     {
       "type": "shell",
       "label": "backend-dev-env",
-      "detail": "Start fresh backend development environment",
+      "detail": "Start backend development environment",
       "command": "docker compose down -v --remove-orphans && docker compose --profile backend-dev up -d && sleep 10 && cd backend && npm run start:dev",
+      "problemMatcher": []
+    },
+    {
+      "type": "shell",
+      "label": "clean-backend-dev-env",
+      "detail": "Start fresh backend development environment",
+      "command": "docker compose down -v --remove-orphans && rm -rf volumes && docker compose --profile backend-dev up -d && sleep 10 && cd backend && npm run start:dev",
       "problemMatcher": []
     }
   ]
