--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,17 +6,16 @@ LLM_MODEL_NAME=gpt-3.5-turbo
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
 VECTOR_DB_URL=
+VECTOR_DB_API_KEY=
 VECTOR_DB_COLLECTION_NAME=septuagint
-VECTOR_DB_DIMENSIONS=1536 # Should be size of OpenAI embeddings
-VECTOR_DB_USER=
-VECTOR_DB_PASSWORD=
+VECTOR_DB_COLLECTION_SIZE=1536
 
 DATABASE_TYPE=postgres
 DATABASE_HOST=
 DATABASE_PORT=5432
 DATABASE_USER=septuagint
 DATABASE_PASSWORD=
-DATABASE_DB=septuagint
+DATABASE_NAME=septuagint
 RUN_DATABASE_MIGRATIONS=true
 
 WEB_SCRAPER_THREADS=4
