--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "nest build",
     "build:docker": "nest build && docker build -t septuagint/backend:${npm_package_version} -t septuagint/backend:latest -f Dockerfile .",
-    "migrations:generate": "npm run build && typeorm migration:generate -d ./dist/app/configs/typeorm.js ./src/app/migrations/migration --pretty",
+    "migrations:generate": "npm run build && typeorm migration:generate -d ./dist/app/configs/datasource.js ./src/app/migrations/migration --pretty",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -25,14 +25,6 @@
   "devDependencies": {
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.1.1",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
-    "@nx/js": "16.3.2",
-    "@nx/linter": "16.3.2",
-    "@nx/nest": "^16.3.2",
-    "@nx/node": "16.3.2",
-    "@nx/webpack": "16.3.2",
-    "@nx/workspace": "16.3.2",
     "@types/cron": "^2.0.1",
     "@types/jest": "^29.4.0",
     "@types/multer": "^1.4.7",
@@ -45,8 +37,6 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "16.3.2",
-    "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -63,7 +53,7 @@
     "@nestjs/platform-express": "^9.1.1",
     "@nestjs/schedule": "^2.2.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@zilliz/milvus2-sdk-node": "^2.2.15",
+    "@qdrant/js-client-rest": "^1.2.2",
     "axios": "^1.0.0",
     "axios-retry": "^3.5.0",
     "bull": "^4.10.4",
