Qdrant ain't working

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,9 @@ LLM_TEMPERATURE=0.7
 LLM_MODEL_NAME=gpt-3.5-turbo
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
-VECTOR_DB_URL=
+VECTOR_DB_SCHEME=http
+VECTOR_DB_HOST=
+VECTOR_DB_PORT=6333
 VECTOR_DB_API_KEY=
 VECTOR_DB_COLLECTION_NAME=septuagint
 VECTOR_DB_COLLECTION_SIZE=1536
