--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
+# Copy to .env.local to use for development
 NODE_ENV=development
 
 LLM_API_KEY=
@@ -5,12 +6,13 @@ LLM_TEMPERATURE=0.7
 LLM_MODEL_NAME=gpt-3.5-turbo
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
-VECTOR_DB_SCHEME=http
+VECTOR_DB_TYPE=qdrant
+VECTOR_DB_SCHEME=
 VECTOR_DB_HOST=
 VECTOR_DB_PORT=6333
 VECTOR_DB_API_KEY=
 VECTOR_DB_COLLECTION_NAME=septuagint
-VECTOR_DB_COLLECTION_SIZE=1536
+VECTOR_DB_COLLECTION_DIMENSIONS=1536
 
 DATABASE_TYPE=postgres
 DATABASE_HOST=
