--- a/backend/.env
+++ b/backend/.env
@@ -11,15 +11,15 @@ VECTOR_DB_SCHEME=
 VECTOR_DB_HOST=
 VECTOR_DB_PORT=6333
 VECTOR_DB_API_KEY=
-VECTOR_DB_COLLECTION_NAME=septuagint
+VECTOR_DB_COLLECTION_NAME=chatesv
 VECTOR_DB_COLLECTION_DIMENSIONS=1536
 
 DATABASE_TYPE=postgres
 DATABASE_HOST=
 DATABASE_PORT=5432
-DATABASE_USER=septuagint
+DATABASE_USER=chatesv
 DATABASE_PASSWORD=
-DATABASE_NAME=septuagint
+DATABASE_NAME=chatesv
 RUN_DATABASE_MIGRATIONS=true
 
 WEB_SCRAPER_THREADS=4
@@ -28,7 +28,7 @@ REDIS_HOST=
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-S3_BUCKET_NAME=septuagint
+S3_BUCKET_NAME=
 S3_REGION=us-east-1
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
