--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,22 @@
+FROM docker.io/node:20.2.0 AS builder
+
+ENV NODE_ENV=production
+
+WORKDIR /app
+
+COPY package.json ./
+COPY nest-cli.json ./
+COPY tsconfig*.json ./
+COPY src ./src
+
+# Install node dependencies
+RUN npm i -g @nestjs/cli \
+  && npm i \
+  && npm cache clean --force
+
+# Build
+RUN npm run build
+
 FROM docker.io/node:20.2.0
 
 ENV HOST=0.0.0.0
@@ -31,8 +50,8 @@ RUN groupadd -r sept \
   && useradd -rm -g sept -G audio,video sept
 
 # Copy essential files
-COPY package*.json ./
-COPY dist ./dist
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/dist ./dist
 
 # Install node dependencies
 RUN npm ci --omit=dev \
