--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "type": "commonjs",
   "scripts": {
     "build": "nest build",
-    "build:docker": "nest build && docker build -t chatesv/backend:${npm_package_version} -t chatesv/backend:latest -f Dockerfile .",
+    "build:docker": "docker build -t chatesv/backend:${npm_package_version} -t chatesv/backend:latest -f Dockerfile .",
     "migrations:generate": "npm run build && typeorm migration:generate -d ./dist/migration.js ./src/app/migrations/migration --pretty",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
