--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,8 +21,8 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "paths": {
-      "@configs/*": ["src/app/configs/*"],
-      "@configs": ["src/app/configs"],
+      "@configs/*": ["./src/app/configs/*"],
+      "@configs": ["./src/app/configs"],
       "@modules/*": ["./src/app/modules/*"],
       "@dtos/*": ["./src/app/dtos/*"],
       "@entities/*": ["src/app/entities/*"],
