--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "backend",
-  "version": "0.0.1",
+  "name": "@chatesv/backend",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": true,
@@ -26,6 +26,7 @@
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.1.1",
     "@types/cron": "^2.0.1",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/multer": "^1.4.7",
     "@types/node": "~18.7.1",
