--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,17 @@
 # Copy to .env.local to use for development
 NODE_ENV=development
+PORT=8080
+
+WEBSITE_URL=
+API_URL=
+API_BASE_PATH=/api
+
+AUTH_CONNECTION_URI=
+AUTH_API_KEY=
+AUTH_ADMIN_USERNAME=
+AUTH_ADMIN_PASSWORD=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 LLM_API_KEY=
 LLM_TEMPERATURE=0.7
