--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/testing": "^9.1.1",
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.4.0",
     "@types/multer": "^1.4.7",
     "@types/node": "~18.7.1",
@@ -68,6 +69,7 @@
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "supertokens-node": "^14.1.2",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.16"
   },
