--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 CERT_ARN=arn:aws:acm:us-east-1:008193302444:certificate/a4b86ce4-c7ae-4275-a402-0153466abdbc
-WEBSITE_URL=http://localhost:3000
-API_URL=http://api.chatesv.com
-API_BASE_PATH=
 
 AUTH_ADMIN_EMAIL=admin@chatesv.com
+AUTH_ADMIN_PASSWORD=
+AUTH_CONNECTION_URI=
+AUTH_API_KEY=
 
 LLM_API_KEY=
 LLM_TEMPERATURE=0.7
 LLM_MODEL_NAME=gpt-3.5-turbo
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
-VECTOR_DB_HOST=
-VECTOR_DB_PORT=443
+VECTOR_DB_HOST=16d42bec-a2d0-4ea5-9694-a25378122c96.us-east-1-0.aws.cloud.qdrant.io
+VECTOR_DB_PORT=433
 VECTOR_DB_API_KEY=
 VECTOR_DB_COLLECTION_DIMENSIONS=1536
