--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -4,7 +4,7 @@ PORT=8080
 
 WEBSITE_URL=
 API_URL=
-API_BASE_PATH=/api
+API_BASE_PATH=
 
 AUTH_CONNECTION_URI=
 AUTH_API_KEY=
@@ -42,7 +42,3 @@ REDIS_PASSWORD=
 
 S3_BUCKET_NAME=
 S3_REGION=us-east-1
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
-
-UNSTRUCTURED_API_URL=
