FINAL COMMIT WITH AWS CDK

--- a/.env
+++ b/.env
@@ -10,7 +10,6 @@ LLM_TEMPERATURE=0.7
 LLM_MODEL_NAME=gpt-3.5-turbo
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
-VECTOR_DB_HOST=16d42bec-a2d0-4ea5-9694-a25378122c96.us-east-1-0.aws.cloud.qdrant.io
-VECTOR_DB_PORT=433
+VECTOR_DB_URL=
 VECTOR_DB_API_KEY=
 VECTOR_DB_COLLECTION_DIMENSIONS=1536
