--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -18,15 +18,11 @@ LLM_TEMPERATURE=0.7
 LLM_MODEL_NAME=gpt-3.5-turbo
 LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
-VECTOR_DB_TYPE=qdrant
-VECTOR_DB_SCHEME=
-VECTOR_DB_HOST=
-VECTOR_DB_PORT=6333
+VECTOR_DB_URL=
 VECTOR_DB_API_KEY=
 VECTOR_DB_COLLECTION_NAME=chatesv
 VECTOR_DB_COLLECTION_DIMENSIONS=1536
 
-DATABASE_TYPE=postgres
 DATABASE_HOST=
 DATABASE_PORT=5432
 DATABASE_USER=chatesv
