--- a/package.json
+++ b/package.json
@@ -1,24 +1,8 @@
 {
   "name": "chatesv",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Chat ESV Monorepo",
   "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "sst dev",
-    "build": "sst build",
-    "deploy": "sst deploy",
-    "remove": "sst remove",
-    "console": "sst console",
-    "typecheck": "tsc --noEmit"
-  },
-  "devDependencies": {
-    "@aws-cdk/aws-apprunner-alpha": "2.84.0-alpha.0",
-    "@tsconfig/node16": "^16.1.0",
-    "aws-cdk-lib": "2.84.0",
-    "constructs": "10.1.156",
-    "sst": "^2.17.6",
-    "typescript": "^5.1.5"
-  },
   "workspaces": [
     "packages/*"
   ]
