Adding service layer

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -24,8 +24,8 @@
       "@configs": ["./src/configs"],
       "@components/*": ["./src/components/*"],
       "@components": ["./src/components"],
-      "@client/*": ["./src/lib/client/*"],
-      "@server/*": ["./src/lib/server/*"],
+      "@services/*": ["./src/services/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@lib/*": ["./src/lib/*"],
       "@types/*": ["./src/types/*"],
       "@types": ["./src/types"],
