--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,7 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-textarea-autosize": "^8.5.2"
+    "react-textarea-autosize": "^8.5.2",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.16.2",
