--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.0.0",
     "@qdrant/js-client-rest": "^1.3.0",
     "ai": "^2.1.14",
     "autoprefixer": "10.4.14",
@@ -32,7 +32,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-textarea-autosize": "^8.5.2",
+    "remark": "^14.0.3",
+    "remark-gfm": "^3.0.1",
     "swr": "^2.2.0",
     "tailwindcss-brand-colors": "^0.3.3"
   },
@@ -45,7 +48,7 @@
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "prisma": "^4.16.2",
+    "prisma": "^5.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
