--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "@chatesv/web",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
