--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "build:docker": "docker build -t chatesv/web:latest -t chatesv/web:$npm_package_version .",
-    "start": "next start",
+    "start": "node .next/standalone/packages/web/server.js",
     "lint": "next lint",
     "prisma:generate": "prisma generate"
   },
@@ -22,10 +22,12 @@
     "cron": "^2.3.1",
     "fast-xml-parser": "^4.2.5",
     "langchain": "^0.0.102",
+    "mammoth": "^1.6.0",
     "moment": "^2.29.4",
     "next": "13.4.8",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
+    "pdf-parse": "^1.1.1",
     "postcss": "8.4.24",
     "puppeteer": "^19.11.1",
     "react": "18.2.0",
