--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "compilerOptions": {
-    "declaration": false,
-    "declarationMap": false,
     "typeRoots": ["../core/src/types"],
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -37,6 +35,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "../core/src/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
