--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.21.3",
+    "@tsconfig/node16": "^16.1.0",
+    "@types/node": "^20.4.2",
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
-    "typescript": "^5.1.6",
-    "@tsconfig/node16": "^16.1.0"
+    "prisma": "^5.0.0",
+    "sst": "^2.21.3",
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "kysely": "^0.26.1",
+    "kysely-data-api": "^0.2.1",
+    "pg": "^8.11.1"
   },
   "workspaces": [
     "packages/*"
