--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,12 +7,16 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^0.33.0",
     "@types/node": "^20.4.2",
     "sst": "^2.21.3",
-    "prisma": "5.0.0"
+    "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@prisma/client": "5.0.0"
+    "@auth/prisma-adapter": "^1.0.1",
+    "@qdrant/js-client-rest": "^1.3.0",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
+    "langchain": "^0.0.109",
+    "next-auth": "^4.22.1"
   }
 }
