--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,12 +8,22 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.119",
+    "@types/busboy": "^1.5.0",
     "@types/node": "^20.4.2",
     "sst": "^2.21.3",
     "vitest": "^0.33.0"
   },
   "dependencies": {
+    "@chatesv/core": "*",
+    "@auth/prisma-adapter": "^1.0.1",
+    "@qdrant/js-client-rest": "^1.3.0",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
+    "busboy": "^1.6.0",
     "chrome-aws-lambda": "^10.1.0",
-    "fast-xml-parser": "^4.2.5"
+    "fast-xml-parser": "^4.2.5",
+    "langchain": "^0.0.109",
+    "next-auth": "^4.22.1",
+    "pdf-parse": "^1.1.1"
   }
 }
