--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -5,11 +5,11 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@chatesv/core/*": ["../core/src/*"],
       "@configs/*": ["../core/src/configs/*"],
       "@configs": ["../core/src/configs"],
       "@services/*": ["../core/src/services/*"],
-      "@types/*": ["../core/src/types/types/*"]
+      "@types/*": ["../core/src/types/types/*"],
+      "@chatesv/core/*": ["../core/src/*"]
     }
   }
 }
