--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,17 +12,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
-    "@prisma/client": "^5.0.0",
+    "@chatesv/core": "*",
     "@qdrant/js-client-rest": "^1.3.0",
     "ai": "^2.1.14",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "classnames": "^2.3.2",
-    "cron": "^2.3.1",
     "fast-xml-parser": "^4.2.5",
-    "langchain": "^0.0.102",
-    "mammoth": "^1.6.0",
+    "langchain": "^0.0.109",
     "moment": "^2.29.4",
     "next": "13.4.8",
     "next-auth": "^4.22.1",
@@ -38,19 +36,16 @@
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "swr": "^2.2.0",
-    "tailwindcss-brand-colors": "^0.3.3",
-    "@chatesv/core": "*"
+    "tailwindcss-brand-colors": "^0.3.3"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.16.2",
-    "@types/cron": "^2.0.1",
-    "@types/formidable": "^3.4.0",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "prisma": "^5.0.0",
+    "sst": "^2.21.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
