--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "@tsconfig/node16/tsconfig.json",
   "exclude": ["packages"],
   "compilerOptions": {
-    "moduleResolution": "node"
+    "moduleResolution": "Node",
+    "paths": {
+      "@stacks/*": ["./stacks/*"],
+      "@stacks": ["./stacks"]
+    }
   }
 }
