--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
     "prisma": "^5.0.0",
-    "sst": "^2.21.3",
+    "sst": "^2.21.7",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
-    "kysely": "^0.26.1",
-    "kysely-data-api": "^0.2.1",
-    "pg": "^8.11.1"
+    "@prisma/client": "^5.0.0"
   },
   "workspaces": [
     "packages/*"
