--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
-    "@chatesv/core": "*",
+    "@chatesv/core": "^1.0.0",
     "@qdrant/js-client-rest": "^1.3.0",
-    "ai": "^2.1.14",
+    "ai": "^2.1.20",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
@@ -45,7 +45,7 @@
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "sst": "^2.21.4",
+    "sst": "^2.21.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
