--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-rds-data": "^3.370.0",
+    "@aws-sdk/credential-providers": "^3.370.0",
     "drizzle-orm": "^0.27.2",
     "drizzle-zod": "^0.4.4",
     "pg": "^8.11.1",
