--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,11 +12,9 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.1",
     "@qdrant/js-client-rest": "^1.3.0",
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
-    "langchain": "^0.0.109",
-    "next-auth": "^4.22.1"
+    "langchain": "^0.0.109"
   }
 }
