--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -15,7 +15,7 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@chatesv/core": "workspace:*",
+    "@chatesv/core": "*",
     "busboy": "^1.6.0",
     "chrome-aws-lambda": "^10.1.0",
     "fast-xml-parser": "^4.2.5",
