--- a/packages/vector-db-migrations/tsconfig.json
+++ b/packages/vector-db-migrations/tsconfig.json
@@ -11,6 +11,6 @@
     "sourceMap": true,
     "outDir": "./dist"
   },
-  "include": ["./src/**/*"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
