--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chatesv/core": "workspace:*",
+    "@chatesv/core": "*",
     "@qdrant/js-client-rest": "^1.3.0",
     "ai": "^2.1.20",
     "autoprefixer": "10.4.14",
@@ -20,7 +20,6 @@
     "langchain": "^0.0.109",
     "moment": "^2.29.4",
     "next": "13.4.8",
-    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.24",
