--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.2",
     "fast-xml-parser": "^4.2.5",
     "langchain": "^0.0.109",
     "moment": "^2.29.4",
