--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -2,8 +2,16 @@
 NEXT_PUBLIC_WEBSITE_URL=
 NEXT_PUBLIC_SCRAPER_API_URL=
 
+# S3
+INDEX_FILE_BUCKET=
+
 # Database
-DATABASE_URL=
+DATABASE_RESOURCE_ARN=
+DATABASE_SECRET_ARN=
+DATABASE_NAME=chatesv
+# Set this to true if you want to use a local database with the given DATABASE_URL
+IS_LOCAL=false
+DATABASE_URL=postgresql://chatesv:chatesv@localhost:5432/chatesv
 
 # Vector Database
 VECTOR_DB_URL=
