--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
     "drizzle-kit": "^0.19.5",
-    "sst": "^2.21.7",
+    "sst": "^2.22.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@aws-sdk/client-rds-data": "^3.370.0",
+    "@aws-sdk/client-s3": "^3.370.0",
+    "@aws-sdk/client-sqs": "^3.370.0",
     "@aws-sdk/credential-providers": "^3.370.0",
-    "aws-sdk": "^2.1416.0",
     "drizzle-orm": "^0.27.2",
     "drizzle-zod": "^0.4.4",
     "pg": "^8.11.1",
