--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@chatesv/core": "*",
     "@qdrant/js-client-rest": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.1.20",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "cookies-next": "^2.1.2",
     "fast-xml-parser": "^4.2.5",
     "langchain": "^0.0.109",
+    "lucide-react": "^0.261.0",
     "moment": "^2.29.4",
     "next": "13.4.8",
     "nodemailer": "^6.9.3",
@@ -32,6 +36,8 @@
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "swr": "^2.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "tailwindcss-brand-colors": "^0.3.3"
   },
   "devDependencies": {
